Fix collapse menu items margin

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1459,3 +1459,9 @@ Home Page bg
 .embed-pagination ul {
 	padding: 10px 0 20px;
 }
+
+@media only screen and (max-width: 768px) {
+	#menuCollapse #navbar .nav-link {
+		margin: 30px 0 -20px 20px!important;
+	}
+}
